--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ runs:
       run: |
 
         echo "Starting to bump patch version for packages: $PACKAGE_NAMES"
-        echo "Input package names: ${{ github.inputs.package_names }}"
+        echo "Input package names: ${{ inputs.package_names }}"
         # Read the current sfdx-project.json
         INPUT_FILE="sfdx-project.json"
         NEXT="NEXT"
@@ -78,4 +78,4 @@ runs:
         done
       shell: bash
       env:
-        PACKAGE_NAMES: ${{ github.inputs.package_names }}
+        PACKAGE_NAMES: ${{ inputs.package_names }}
